# alife

./: README.md  pyproject.toml  setup.py
alife/: core.py
alife/environments/: grid.py
alife/models/discrete_systems/: langtons_ant.py
alife/models/discrete_systems/cellular_automata/: game_of_life.py
alife/resources/: base.py  computational.py
examples/: game_of_life_example.py  langtons_ant_example.py
tests/: test_core.py  test_game_of_life.py  test_grid_environment.py  test_langtons_ant.py  test_resources_base.py
